<resources>
    <string name="app_name">Atencion Domiciliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_registros">Registros</string>
    <string name="menu_salir">Cerrar Sesión</string>
    <string name="nueva_cita">Nueva Cita</string>
    <string name="hc">Historia Clínica</string>
    <string name="lista_citas">Agenda de Citas</string>
    <string name="cambiar_clave">Cambiar Clave</string>
    <string name="adm_de_farmacos">Administración de Farmacos</string>
    <string name="curaciones">Curaciones</string>
    <string name="hyc">Higiene y Confort</string>
    <string name="csv">Control de Signos Vitales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>