<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/equipo_medico"
            android:iconTintMode="add"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/cita"
            android:iconTintMode="add"
            android:title="@string/menu_citas" />
        <item
            android:id="@+id/nav_pacientes"
            android:icon="@drawable/paciente"
            android:iconTintMode="add"
            android:title="@string/menu_pacientes" />
        <item
            android:id="@+id/nav_registros"
            android:icon="@drawable/registros_medicos"
            android:iconTintMode="add"
            android:title="@string/menu_registros" />
    </group>
    <item android:title="Salir">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/cerrar_sesion"
                android:iconTintMode="add"
                android:title="@string/menu_salir"/>
        </menu>
    </item>

</menu>