<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.atenciondomiciliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_citas"
        android:name="com.example.atenciondomiciliaria.ui.gallery.GalleryFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_pacientes"
        android:name="com.example.atenciondomiciliaria.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_pacientes"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_registros"
        android:name="com.example.atenciondomiciliaria.ui.registro.RegistrosFragment"
        android:label="@string/menu_registros"
        tools:layout="@layout/fragment_registros" />


</navigation>